--- a/Dockerfile.dotnet
+++ b/Dockerfile.dotnet
@@ -2,7 +2,7 @@ FROM microsoft/dotnet:latest
 LABEL maintainer "vanwinkle.justin@gmail.com"
 
 # Set up 1.1.2 runtime for backwards compatability with SB apps
-RUN https://download.microsoft.com/download/7/8/5/7852163D-1A56-4642-84B6-60A8537343EF/dotnet-sharedframework-ubuntu.16.04-x64.1.0.5.deb
+RUN wget https://download.microsoft.com/download/7/8/5/7852163D-1A56-4642-84B6-60A8537343EF/dotnet-sharedframework-ubuntu.16.04-x64.1.0.5.deb
 RUN dpkg -i dotnet-sharedframework-ubuntu.16.04-x64.1.0.5.deb
 RUN rm dotnet-sharedframework-ubuntu.16.04-x64.1.0.5.deb
 
