--- a/Dockerfile.dotnet
+++ b/Dockerfile.dotnet
@@ -2,9 +2,10 @@ FROM microsoft/dotnet:latest
 LABEL maintainer "vanwinkle.justin@gmail.com"
 
 # Set up 1.1.2 runtime for backwards compatability with SB apps
-RUN wget https://download.microsoft.com/download/7/8/5/7852163D-1A56-4642-84B6-60A8537343EF/dotnet-sharedframework-ubuntu.16.04-x64.1.0.5.deb
-RUN dpkg -i dotnet-sharedframework-ubuntu.16.04-x64.1.0.5.deb
-RUN rm dotnet-sharedframework-ubuntu.16.04-x64.1.0.5.deb
+RUN sh -c 'echo "deb [arch=amd64] https://apt-mo.trafficmanager.net/repos/dotnet-release/ xenial main" > /etc/apt/sources.list.d/dotnetdev.list'
+RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 417A0893
+RUN apt-get update
+RUN apt-get install -y dotnet-sdk-ubuntu-x64.1.0.4
 
 # Install the Node.js repo
 RUN curl -sL https://deb.nodesource.com/setup_7.x | bash -
