--- a/Dockerfile.dotnet
+++ b/Dockerfile.dotnet
@@ -1,6 +1,9 @@
 FROM microsoft/dotnet:latest
 LABEL maintainer "vanwinkle.justin@gmail.com"
 
+RUN apt-get update
+RUN apt-get install apt-transport-https
+
 # Set up 1.1.2 runtime for backwards compatability with SB apps
 RUN sh -c 'echo "deb [arch=amd64] https://apt-mo.trafficmanager.net/repos/dotnet-release/ xenial main" > /etc/apt/sources.list.d/dotnetdev.list'
 RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 417A0893
