--- a/Dockerfile.dotnet-rider
+++ b/Dockerfile.dotnet-rider
@@ -3,6 +3,7 @@ LABEL maintainer "vanwinkle.justin@gmail.com"
 
 # Download and extract rider
 RUN cd /opt && \
+    mkdir rider && \
+    cd rider && \
     curl -L `echo -n \`curl -s 'https://data.services.jetbrains.com/products/releases?code=RD&latest=true&type=eap' | jq -r '.RD[0].downloads.linux.link'\`` | \
-    tar xz && \
-    mv `ls` ./rider/
+    tar xz -C 
