--- a/Dockerfile.dotnet-rider
+++ b/Dockerfile.dotnet-rider
@@ -6,4 +6,5 @@ RUN cd /opt && \
     mkdir rider && \
     cd rider && \
     curl -L `echo -n \`curl -s 'https://data.services.jetbrains.com/products/releases?code=RD&latest=true&type=eap' | jq -r '.RD[0].downloads.linux.link'\`` | \
-    tar xz
+    tar xz && \
+    mv ./*/* ./
