--- a/Dockerfile.dotnet
+++ b/Dockerfile.dotnet
@@ -5,10 +5,10 @@ RUN apt-get update
 RUN apt-get install apt-transport-https
 
 # Set up 1.1.2 runtime for backwards compatability with SB apps
-RUN wget https://download.microsoft.com/download/2/4/A/24A06858-E8AC-469B-8AE6-D0CEC9BA982A/dotnet-ubuntu.16.04-x64.1.0.5.tar.gz
-RUN mkdir -p /opt/dotnet
-RUN tar zxf dotnet-ubuntu.16.04-x64.1.0.5.tar.gz -C /opt/dotnet
-RUN ln -s /opt/dotnet/dotnet /usr/local/bin
+#RUN wget https://download.microsoft.com/download/2/4/A/24A06858-E8AC-469B-8AE6-D0CEC9BA982A/dotnet-ubuntu.16.04-x64.1.0.5.tar.gz
+#RUN mkdir -p /opt/dotnet
+#RUN tar zxf dotnet-ubuntu.16.04-x64.1.1.2.tar.gz -C /opt/dotnet
+#RUN ln -s /opt/dotnet/dotnet /usr/local/bin
 
 # Install the Node.js repo
 RUN curl -sL https://deb.nodesource.com/setup_7.x | bash -
