--- a/Dockerfile.dotnet-ide
+++ b/Dockerfile.dotnet-ide
@@ -7,46 +7,43 @@ LABEL maintainer "vanwinkle.justin@gmail.com"
 RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF && \
     echo "deb http://download.mono-project.com/repo/debian jessie main" | tee /etc/apt/sources.list.d/mono-official.list
 
-# Install everything needed to run an X app inside a container.
-# NOTE: I copied this from some other Dockerfile, it can probably
-# be optimized a little bit.
+# Install everything needed to forward X and set up an app.
 RUN export DEBIAN_FRONTEND=noninteractive && \
     apt-get update && \
     apt-get install -y --no-install-recommends \
-        jq \
-        mono-complete \
-        msbuild \
-        git \
-        libc6-dev \
-        libgtk2.0-0 \
-        libgtk-3-0 \
-        libpango-1.0-0 \
-        libcairo2 \
-        libfontconfig1 \
-        libgconf2-4 \
-        libnss3 \
-        libasound2 \
-        libxtst6 \
-        libglib2.0-bin \
-        libcanberra-gtk-module \
-        libgl1-mesa-glx \
-        build-essential \
-        gettext \
-        libstdc++6 \
-        software-properties-common \
-        automake \
-        libtool \
-        autogen \
-        libnotify-bin \
-        aspell \
-        aspell-en \
-        gvfs-bin \
-        libxss1 \
-        rxvt-unicode-256color \
-        x11-xserver-utils \
-        xdg-utils \
-        libgl1-mesa-dri \
-        libcanberra-gtk-module \
-        libexif-dev && \
+	ca-certificates \
+	curl \
+    jq \
+    libc6-dev \
+    libgtk2.0-0 \
+    libgtk-3-0 \
+    libpango-1.0-0 \
+    libcairo2 \
+    libfontconfig1 \
+    libgconf2-4 \
+    libnss3 \
+    libasound2 \
+    libxtst6 \
+    libglib2.0-bin \
+    libcanberra-gtk-module \
+    libgl1-mesa-glx \
+    build-essential \
+    gettext \
+    libstdc++6 \
+    software-properties-common \
+    libtool \
+    autogen \
+    libnotify-bin \
+    aspell \
+    aspell-en \
+    gvfs-bin \
+    libxss1 \
+    rxvt-unicode-256color \
+    x11-xserver-utils \
+    xdg-utils \
+    libgl1-mesa-dri \
+    libcanberra-gtk-module \
+    libexif-dev \
+    pulseaudio && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
